--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -1,7 +1,6 @@
 <h3>Coupons</h3>
 <% @coupons.each do |coupon| %>
-
-  <div><a href= <%= coupon_path coupon.id %> ><%= coupon.coupon_code %></a></div>
-  <div><a href= <%= coupon_path coupon.id %> ><%= coupon.store %></a></div>
-
+  <div><%= link_to coupon.coupon_code, coupon_path(coupon.id)%></div>
+  <div><%=  link_to coupon.store, coupon_path(coupon.id) %></div>
+  
 <% end %>
