--- a/app/views/coupons/new.html.erb
+++ b/app/views/coupons/new.html.erb
@@ -1,11 +1,11 @@
 <h3>Coupon Form</h3><br>
-<%= form_tag coupons_path do %>
-<label>Coupon code: </label>
-<input type="text" id="coupon_code" name="coupon[coupon_code]">
+<%= form_for @coupon do |f| %>
 
-<label>Store: </label>
-<input type="text" id="store" name="coupon[store]">
+<%= f.label :coupon_code, value: "Coupon Code: " %>
+<%= f.text_field :coupon_code %>
 
-<%= hidden_field_tag :authencity_token, form_authenticity_token %>
-<input type="submit" value="Submit Coupon">
-<% end %>
+<%= f.label :store, value: "Store: " %>
+<%= f.text_field :store %>
+
+<%= f.submit value: "Submit Coupon" %>
+<% end  %>
